assets/css/style.css
/*Google Fonts import*/
@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Grandstander:wght@500&display=swap');

/*Gereral styles*/
:root {
    --primary-font: "Grandstander", cursive;
    --secondary-font: "Bungee Shade", sans-serif;
    --primary-color: #345030;
    /*palm leaf*/
    --secondary-color: #120808;
    /* night rider */
    --highlight-color: #FDE4A1;
    /* peach crème brûlée */
    --highlight-color-light: #ffffff;
    /* white */
    --highlight-color-headers: #DAF033;
    /*lime fizz*/
}

/*Global styles*/

body {
    font-family: var(--secondary-font);
    color: var(--highlight-color);
    background-color: var(--primary-color);
    color: black;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-width: 100%;
    margin: 0px;
}

p {
    font-family: var(--primary-font);
    color: var(--highlight-color);
    width: 100%;
    text-align: start;
    margin-right: 10px;
    margin-left: 10px;
    padding-right: 10px;
    padding-left: 10px;
    font-size: 2em;
    display: flex;
}

h1 {
    font-size: 2rem;
}

h1,
h2,
h3 {
    color: var(--highlight-color-headers);
    text-align: center;
}

h6 {
    font-size: 1rem;
    font-family: var(--primary-font);
}

/* Element styles*/
.source-link {
    font-size: 10px;
}

/*Start screen*/
#start-screen-container {
    margin: auto;
    margin-top: 50px;
    position: relative;
    max-width: 400px;
    max-height: 350px;
    background-color: var(--highlight-color);
    color: #333;
    font-family: var(--primary-font);
    font-size: 10px;
    text-align: center;
    border: 8px solid;
    border-radius: 10px;
    box-shadow: 0 1px 32px var(--highlight-color-headers);
}

#start-screen-title {
    color: var(--primary-color)
}


/* Game */

.game-timer {
    font-family: var(--secondary-font);
    color: var(--secondary-color);
    text-align: center;
    margin: 10px;
    border: var(--secondary-color);
    background-color: var(--highlight-color-headers);
    padding: 10px;
    border: solid var(--secondary-color);
    display: flex;
    justify-content: center;
    max-width: 90px;
}

.actions {
    display: flex;
    justify-content: center;
}

.game-section-container {
    display: grid;
    grid-template-columns: 1fr, 1fr, 1fr, 1fr;
    grid-gap: 10px;
    justify-content: center;
    align-content: center;
    height: 100%;
    width: 100%;
}

.card-view {
    position: absolute;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    border-width: 2px;
    border-style: solid;
    flex-direction: row;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    background-color: var(--highlight-color);
    cursor: pointer;
    perspective: 1000px;
}

.game-card {
    height: 90px;
    width: 60px;
    margin: 5px;
    position: relative;
    transform-style: preserve-3d;
    transition: transform 0.5s ease-in-out;
    cursor: pointer;
}

.game-card.is-flipped {
    transform: rotateY(180deg);
}

.game-card .card-front img {
    width: 75px;
}

.game-card .card-back {
    transform: rotateY(180deg);
}


.cards .game-card {
    cursor: pointer;
    user-select: none;
    position: relative;
    justify-content: space-between;
    flex-shrink: inherit;
}


.card-front .card-back {
    background-color: var(--highlight-color);
    backface-visibility: hidden;
}




#gameboard {
    padding: 10px;
    border-radius: 10px;
    background-color: #345030;
    background-image: url(https://images.pexels.com/photos/2757549/pexels-photo-2757549.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
    background-color: var(--highlight-color);
    border-color: #DAF033;
    box-shadow: 10px 5px 5px var(--secondary-color);
    width: 100%;
    height: 100%;
}

/*Navbar styling*/
#navbar {
    background-color: var(--primary-color);
    color: greenyellow;
    font-family: (--secondary-font);
    font-size: 30px;
    align-items: end;
    display: flex;
    min-width: 100%;
    top: 0;
    margin: 0;
}

.nav-container {
    padding-right: 0px !important;
    padding-left: 0px !important;
    margin: 0;
    width: 100%;
}

.nav-active {
    color: orange;
}

#navbar .logo {
    width: 50px;
}

.nav-link {
    font-size: 30px;
}

.container-fluid {
    min-width: 100%;
}


/*Media Queries*/



/*Junk*/
/*
.cards .game-card .card-view {
    display: flex;
    justify-content: center;
    border-color: #DAF033;
    align-items: center;
}

.game-card .card-view {
    width: 100%;
    height: 100%;
    border-radius: 10px;
    position: absolute;
}

.cards {
    height: 350px;
    width: 350px;
    flex-wrap: wrap;
    justify-content: space-between;
}


.game-card .card-back img {
    width: 50px;
    height: 50px;
}*/


/*#information .card {
    max-width: 350px;
    max-height: 350px;
    background-color: var(--primary-color) !important;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-between;
    min-width: auto;
    padding: 10px;
    margin: 10px;
}*/

